--- a/playbook.yml
+++ b/playbook.yml
@@ -2,9 +2,15 @@
   hosts: local
 
   tasks:
-    - include: tasks/git.yml
-    - include: tasks/sublimetext.yml
-    - include: tasks/av.yml
-    - include: tasks/docker.yml
-    - include: tasks/encryptedfolder.yml
-    # - include: tasks/bash.yml
+    - include_tasks: vars.yml
+    - include_tasks: tasks/git.yml
+    - include_tasks: tasks/ssh.yml
+    - include_tasks: tasks/bash.yml
+    - include_tasks: tasks/av.yml
+    - include_tasks: tasks/docker.yml
+    - include_tasks: tasks/composer.yml
+    - include_tasks: tasks/symfony-cli.yml
+    - include_tasks: tasks/phpstorm.yml
+
+    # DEPRECATED
+    # - include: tasks/sublimetext.yml
