--- a/playbook.yml
+++ b/playbook.yml
@@ -7,10 +7,9 @@
     - include_tasks: tasks/ssh.yml
     - include_tasks: tasks/bash.yml
     - include_tasks: tasks/av.yml
+    - include_tasks: tasks/sublimetext.yml
     - include_tasks: tasks/docker.yml
     - include_tasks: tasks/composer.yml
     - include_tasks: tasks/symfony-cli.yml
     - include_tasks: tasks/phpstorm.yml
 
-    # DEPRECATED
-    # - include: tasks/sublimetext.yml
