--- a/tasks/docker.yml
+++ b/tasks/docker.yml
@@ -42,11 +42,13 @@
     groups: docker
     append: yes
 
-# - name: Update user groups
-# newgrp docker
+- name: Update user groups
+  ansible.builtin.group:
+    name: docker
+    state: present
 
 - name: Install Docker compose
-  get_url: 
-    url : https://github.com/docker/compose/releases/download/1.29.2/docker-compose-Linux-x86_64
-    dest: /usr/local/bin/docker-compose
-    mode: 'u+x,g+x'
+  become: yes
+  apt:
+    pkg:
+      - docker-compose-plugin
