--- a/tasks/ssh.yml
+++ b/tasks/ssh.yml
@@ -3,5 +3,5 @@
   ansible.builtin.user:
     name: "{{ login_user.stdout }}"
     generate_ssh_key: yes
-    ssh_key_bits: 2048
-    ssh_key_file: .ssh/id_rsa
+    ssh_key_type: ed25519
+    ssh_key_file: .ssh/id_ed25519
