--- a/playbook.yml
+++ b/playbook.yml
@@ -6,6 +6,7 @@
     - include_tasks: tasks/git.yml
     - include_tasks: tasks/ssh.yml
     - include_tasks: tasks/bash.yml
+    - include_tasks: tasks/ubuntu.yml
     - include_tasks: tasks/av.yml
     - include_tasks: tasks/sublimetext.yml
     - include_tasks: tasks/docker.yml
