Add slack client, btop, update PHP install

--- a/playbook.yml
+++ b/playbook.yml
@@ -14,3 +14,4 @@
     - include_tasks: tasks/symfony-cli.yml
     - include_tasks: tasks/phpstorm.yml
     - include_tasks: tasks/pgclient.yml
+    - include_tasks: tasks/chat.yml
