Add fish completion for symfony cli

--- a/tasks/symfony-cli.yml
+++ b/tasks/symfony-cli.yml
@@ -15,3 +15,7 @@
   apt:
     pkg:
       - symfony-cli
+
+- name: Enable fish completion for symfony command
+  ansible.builtin.shell: |
+    symfony self:completion fish | sudo tee /etc/fish/completions/symfony.fish
