--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -6,7 +6,7 @@ jobs:
     name: Test on ${{ matrix.os }}
     strategy:
       matrix:
-        os: [ubuntu-24.04, ubuntu-25.04]
+        os: [ubuntu-24.04]
     runs-on: ${{ matrix.os }}
 
     steps:
@@ -18,3 +18,12 @@ jobs:
       - name: Launch playbook
         run: |
           ansible-playbook playbook.yml -i inventories/local --ask-become-pass
+      - name: Check installs
+        run: |
+          git --version
+          task --version
+          composer --version
+          fish --version
+          php --version
+          docker --version
+          symfony -V
