--- a/tasks/composer.yml
+++ b/tasks/composer.yml
@@ -9,17 +9,8 @@
   get_url:
     url: https://getcomposer.org/installer
     dest: /tmp/composer-setup.php
+    checksum: sha384:https://composer.github.io/installer.sig
     mode: '0755'
-
-- name: Check composer installer signature
-  ansible.builtin.command: php -r "echo hash_file('sha384', '/tmp/composer-setup.php');"
-  register: installer_hash
-  changed_when: false
-
-- name: Verify composer installer
-  ansible.builtin.fail:
-    msg: "Composer installer corrupt"
-  when: installer_hash.stdout != 'dac665fdc30fdd8ec78b38b9800061b4150413ff2e3b6f88543c636f7cd84f6db9189d43a81e5503cda447da73c7e5b6'
 
 - name: Install composer
   ansible.builtin.command: php /tmp/composer-setup.php
@@ -34,7 +25,7 @@
 - name: Copy composer in bin folder
   become: yes
   copy:
-    src: composer.phar 
+    src: composer.phar
     dest: /usr/local/bin/composer
     mode: 0777
     force: no
