--- a/playbook.yml
+++ b/playbook.yml
@@ -6,6 +6,7 @@
 
   tasks:
     - include_tasks: vars.yml
+    - include_tasks: tasks/apt.yml
     - include_tasks: tasks/git.yml
     - include_tasks: tasks/ssh.yml
     - include_tasks: tasks/bash.yml
@@ -17,3 +18,4 @@
     - include_tasks: tasks/phpstorm.yml
     - include_tasks: tasks/pgclient.yml
     - include_tasks: tasks/chat.yml
+    - include_tasks: tasks/claude.yml
